# text2image-worker

./: README.md  pyproject.toml  tasks.py  test.py
docker/: Dockerfile  docker-compose.yml
src/: config.py  diffuser.py  utils.py
